--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="inner">
               <h1>Hi i'm <em>Caio</em></h1>
               <p>I'm a software developer</p>
-              <p>specialized on Kotlin languaje</p>
+              <p>specialized on Kotlin language</p>
             </div>
         </div>
         <video autoplay="" loop="" muted>
