--- a/index.html
+++ b/index.html
@@ -45,17 +45,15 @@
                         </div>
                         <div class="marco-detras">
                             <div class="texto-explicativo">
-                                <h3>Nuestra Primera Cita</h3>
-                                <p>Nuestra primera cita registrada, me acuerdo muy bien de ese día,
-                                    de cómo me sentía nervioso antes de verte, de la
-                                    innegable conexión que teniamos que hacia que en mi estómago
-                                    brotaran todas las mariposas del mundo.
+                                <h3>El arte juntando almas</h3>
+                                <p>Esta fue la primera cita a la que te invité, nuestro amor empezó a formarse como no en una exposición de artes mezclada con tecnología,
+                                    muy nosotros, siento que aqui empezamos a conectar de verdad jiji
                                 </p>
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <figcaption class="placa">Nuestra primera cita</figcaption>
+                    <figcaption class="placa">El arte juntando almas</figcaption>
                 </figure>
 
                 <!-- Marco 2 -->
@@ -68,7 +66,7 @@
                         </div>
                         <div class="marco-detras">
                             <div class="texto-explicativo">
-                                <h3>Las Primeras Flores</h3>
+                                <h3>🌷 Tulips 🌷</h3>
                                 <p>El primer ramo que te regalé, elegido con cuidado y nervios ya que era la primera vez
                                     que regalaba uno.
                                     Esas flores representaban un mi amor por ti, el querer empezar algo bonito juntos,
@@ -77,7 +75,7 @@
                             </div>
                         </div>
                     </div>
-                    <figcaption class="placa">El primer ramo de Flores que te dí</figcaption>
+                    <figcaption class="placa">🌷 Tulips 🌷</figcaption>
                 </figure>
 
                 <!-- Marco 3 -->
@@ -92,14 +90,14 @@
                             <div class="texto-explicativo">
                                 <h3>Nuestro Primer Viaje</h3>
                                 <p>
-                                    Este fue lowkey nuestro primer viaje kakkakakaka, si bien no viajamos juntos y no
-                                    estuvimos juntos, estuvimos en el mismo lugar, y sigue siendo de las mayores
-                                    coincidencias de mi vida.
+                                    La mayor coincidencia que nos ha pasado, lowkey nuestro primer viaje,
+                                    cuando viajamos al mismo lugar, al mismo tiempo, sin ni siquiera planearlo, 
+                                    todo a manos del destino, todo preparado para que nos enamoremos. 
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <figcaption class="placa">Nuestro primer viaje (No juntos)</figcaption>
+                    <figcaption class="placa">Nuestro Primer Viaje</figcaption>
                 </figure>
             </div>
 
@@ -187,7 +185,6 @@
                 <button class="btn-siguiente" onclick="cambiarSala(4)">Siguiente sala →</button>
             </div>
         </section>
-        <!-- Sala 4 - Nueva Sala -->
         <!-- Sala 4 - Nueva Sala -->
         <section class="sala" data-sala="4">
             <h1 class="titulo-sala">El nuevo testamento </br>(Nuevo testamento)</h1>
