--- a/index.html
+++ b/index.html
@@ -333,9 +333,9 @@
                 <button class="btn-siguiente" onclick="cambiarSala(6)">Siguiente sala →</button>
             </div>
         </section>
-        <!-- Sala 6 - Nueva Sala Normal -->
-        <section class="sala" data-sala="6">
-            <h1 class="titulo-sala">Título Sala 6</h1>
+        <!-- Sala 6 - Sala Rave Techno -->
+        <section class="sala sala-rave" data-sala="6">
+            <h1 class="titulo-sala">OUR FIRST RAVE TOGETHER</h1>
 
             <div class="galeria">
                 <!-- Marco 1 -->
