--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
                             </div>
                         </div>
                     </div>
-                    <figcaption class="placa"></figcaption>
+                    <figcaption class="placa">Gracias mi vida</figcaption>
                 </figure>
             </div>
 
